# esp32-laser-parcour

./: .gitignore  CMakeLists.txt  README.md  README.md.backup  README_new.md  TODO  copilot-instructions.md  partitions.csv  sdkconfig.defaults
components/audio_board/: board.c  board.h
components/audio_stream/: CMakeLists.txt  board_pins_config.h
components/button_handler/: CMakeLists.txt  button_handler.c
components/button_handler/include/: button_handler.h
components/buzzer/: CMakeLists.txt  buzzer.c
components/buzzer/include/: buzzer.h
components/display_manager/: CMakeLists.txt  display_manager.c  ssd1306.c
components/display_manager/include/: display_manager.h  ssd1306.h
components/espnow_manager/: CMakeLists.txt  espnow_manager.c
components/espnow_manager/include/: espnow_manager.h
components/game_logic/: CMakeLists.txt  game_logic.c
components/game_logic/include/: game_logic.h
components/laser_control/: CMakeLists.txt  laser_control.c
components/laser_control/include/: laser_control.h
components/sd_card_manager/: CMakeLists.txt  sd_card_manager.c
components/sd_card_manager/include/: sd_card_manager.h
components/sensor_manager/: CMakeLists.txt  sensor_manager.c
components/sensor_manager/include/: sensor_manager.h
components/sound_manager/: CMakeLists.txt  audio_output.c  sound_manager.c
components/sound_manager/include/: audio_output.h  sound_manager.h
components/web_server/: CMakeLists.txt  index.html  sound_api.c  sounds.html  web_server.c
components/web_server/include/: web_server.h
components/wifi_ap_manager/: CMakeLists.txt  wifi_ap_manager.c
components/wifi_ap_manager/include/: wifi_ap_manager.h
docs/: README.md
laser_station/: CMakeLists.txt
laser_unit/: CMakeLists.txt  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  logging_config.c  logging_config.h  main.c  module_control.c  module_control.h  module_finish.c  module_finish.h  module_laser.c  module_laser.h  version.h.in
tools/: build_all_modules.sh  prepare_dist.sh  project.cmake
